--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,18 @@
+0.02	26 June 2002
+	Adapted test so that too long lines are now also tested for.
+
+	Removed FLUSH().  Not necessary anymore as everything is written
+	immediately.
+
+	Changed WRITE so that it writes to the handle immediately rather than
+	adding to the buffer in the object.
+
+	Changed PUSHED so that the object is just something to hang the methods
+	on.
+
+	Removed superfluous -package- from pod.
+
+	Emptied TODO: there was some garbage there from another project.
+
 0.01	25 June 2002
 	Initial release of IOLayer::QuotedPrint.
