--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+0.03	27 June 2002
+	Oops.  Object creation only allows one object per interpreter.  Fixed.
+
+	Forgot to update VERSION.  It now correctly shows 0.03.
+
 0.02	26 June 2002
 	Adapted test so that too long lines are now also tested for.
 
